--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,6 +116,9 @@ body{
   align-items: baseline;
   margin-top: 2rem;
   background-color:bisque;
+
+
+
   .sidebar{
     width: 15vw; 
     background-color: antiquewhite;
@@ -155,6 +158,33 @@ body{
       width: 21vw;
       height: 21vw;
       border: 1px solid black;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      .description{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: stretch;
+        
+
+        .card-title{
+          display: block;
+          margin-block-start: 0;
+          margin-block-end: 0;
+        }
+        .card-price{
+          display: block;
+          margin-block-start: 0;
+          margin-block-end: 0;
+        }
+      }
+      img {
+        width: 18vw;
+        height: 18vw;
+        
+      }
     }
     }
     
