fix: fix issue with filter

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -114,6 +114,7 @@ body{
       background-color: $yellow-cv;
     }
     .cart-img{
+      color: $yellow-cv;
       width: 3vw;
     }
     .cart-img:hover{
